--- a/config/FlaxbeardsSteamPower.cfg
+++ b/config/FlaxbeardsSteamPower.cfg
@@ -90,7 +90,7 @@ items {
 machines {
     I:"Chance of double drops from Rock Smasher (1 in X)"=4
     I:"Chance of duplicate drops from Buzzsaw (1 in X)"=6
-    I:"Item Mortar accuracy (radius in blocks)"=2
+    I:"Item Mortar accuracy (radius in blocks)"=1
     B:"Thumper drops items (may lag servers)"=true
 }
 
@@ -159,7 +159,7 @@ weapons {
     B:"Generate End Copper"=false
     B:"Generate End Zinc"=false
     B:"Generate Nether Copper"=true
-    B:"Generate Nether Zinc"=false
+    B:"Generate Nether Zinc"=true
     B:"Generate Overworld Copper"=true
     B:"Generate Overworld Zinc"=true
 }
