--- a/config/GraveStoneMod/GraveStone.cfg
+++ b/config/GraveStoneMod/GraveStone.cfg
@@ -28,6 +28,7 @@ general {
     B:GenerateCatacombsGraveyard=true
     B:GenerateCemeteries=true
     B:GenerateGravesInLava=true
+    B:GenerateGravesInMushroomBiomes=true
     B:GenerateMemorials=true
     B:GeneratePetGraves=true
     B:GeneratePlayerGraves=true
@@ -58,6 +59,11 @@ general {
     B:SpawnZombieDogs=true
     I:StructuresDimensionId=0
     I:undertakerId=385
+}
+
+
+potions {
+    I:CursePotionEffectId=31
 }
 
 
