--- a/config/Loot++/furnace_recipes.cfg
+++ b/config/Loot++/furnace_recipes.cfg
@@ -215,6 +215,41 @@ default_smelting_recipes {
     S:"Input: cfm:ItemFlesh with damage: 32767, Output: cfm:ItemCookedFlesh with damage: 0"=1-0.0
     S:"Input: dendrology:sapling0 with damage: 32767, Output: witchery:ingredient with damage: 18"=1-0.0
     S:"Input: dendrology:sapling1 with damage: 32767, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:amber with damage: 0, Output: erebus:amber with damage: 1"=1-0.0
+    S:"Input: erebus:food with damage: 0, Output: erebus:food with damage: 1"=1-0.0
+    S:"Input: erebus:food with damage: 12, Output: erebus:food with damage: 13"=1-0.0
+    S:"Input: erebus:food with damage: 2, Output: erebus:food with damage: 3"=1-0.0
+    S:"Input: erebus:food with damage: 4, Output: erebus:food with damage: 5"=1-0.0
+    S:"Input: erebus:logAsper with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logBaobab with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logCypress with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logEucalyptus with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logMahogany with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logMossbark with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logRotten with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:logSap with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
+    S:"Input: erebus:materials with damage: 20, Output: erebus:materials with damage: 21"=1-0.0
+    S:"Input: erebus:mud with damage: 0, Output: erebus:materials with damage: 23"=1-0.0
+    S:"Input: erebus:oreCoal with damage: 0, Output: minecraft:coal with damage: 0"=1-0.0
+    S:"Input: erebus:oreDiamond with damage: 0, Output: minecraft:diamond with damage: 0"=1-0.0
+    S:"Input: erebus:oreEmerald with damage: 0, Output: minecraft:emerald with damage: 0"=1-0.0
+    S:"Input: erebus:oreEncrustedDiamond with damage: 0, Output: erebus:encrustedDiamond with damage: 0"=1-0.0
+    S:"Input: erebus:oreFossil with damage: 0, Output: erebus:materials with damage: 2"=1-0.0
+    S:"Input: erebus:oreGneiss with damage: 0, Output: erebus:materials with damage: 48"=1-0.0
+    S:"Input: erebus:oreGold with damage: 0, Output: minecraft:gold_ingot with damage: 0"=1-0.0
+    S:"Input: erebus:oreIron with damage: 0, Output: minecraft:iron_ingot with damage: 0"=1-0.0
+    S:"Input: erebus:oreJade with damage: 0, Output: erebus:materials with damage: 1"=1-0.0
+    S:"Input: erebus:oreLapis with damage: 0, Output: minecraft:dye with damage: 4"=1-0.0
+    S:"Input: erebus:orePetrifiedWood with damage: 0, Output: erebus:materials with damage: 7"=1-0.0
+    S:"Input: erebus:oreTemple with damage: 0, Output: erebus:materials with damage: 42"=1-0.0
+    S:"Input: erebus:saplingAsper with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:saplingBaobab with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:saplingCypress with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:saplingEucalyptus with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:saplingMahogany with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:saplingMossbark with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:saplingSap with damage: 0, Output: witchery:ingredient with damage: 18"=1-0.0
+    S:"Input: erebus:umberstone with damage: 1, Output: erebus:umberstone with damage: 0"=1-0.0
     S:"Input: harvestcraft:anchovyrawItem with damage: 32767, Output: minecraft:cooked_fished with damage: 0"=1-0.0
     S:"Input: harvestcraft:asparagusItem with damage: 32767, Output: harvestcraft:grilledasparagusItem with damage: 0"=1-0.0
     S:"Input: harvestcraft:bassrawItem with damage: 32767, Output: minecraft:cooked_fished with damage: 0"=1-0.0
