--- a/config/SpiceOfLife.cfg
+++ b/config/SpiceOfLife.cfg
@@ -72,7 +72,7 @@ server {
     D:food.eating.speed.modifier=1.0
 
     # The maximum amount of eaten foods stored in the history at a time
-    I:food.history.length=12
+    I:food.history.length=8
 
     # If true, food history will not get reset after every death
     B:food.history.persists.through.death=true
@@ -97,7 +97,7 @@ server {
     S:food.modifier.formula=MAX(0, (1 - count/12))^MIN(8, food_hunger_value)
 
     # If true, a food journal will be given to each player as a starting item
-    B:give.food.journal.as.starting.item=true
+    B:give.food.journal.as.starting.item=false
 
     # If true, a food journal will be given to each player once diminishing returns start for them
     # Not given if a player was given a food journal by give.food.journal.as.starting.item
