--- a/config/UtilityMobs.cfg
+++ b/config/UtilityMobs.cfg
@@ -41,7 +41,7 @@ blocks {
     B:WorkbenchGolem=true
 
     # If false, block golems will not be buildable.
-    B:_all=true
+    B:_all=false
 }
 
 
@@ -57,7 +57,7 @@ colossals {
     B:StoneColossus=true
 
     # If false, colossal golems will not be buildable.
-    B:_all=true
+    B:_all=false
 }
 
 
@@ -81,7 +81,7 @@ golems {
     B:UMSnowGolem=true
 
     # If false, golem golems will not be buildable.
-    B:_all=true
+    B:_all=false
 }
 
 
@@ -105,10 +105,10 @@ hostiles {
 
 turrets {
     B:BrickTurret=true
-    B:FireTurret=true
-    B:FireballTurret=true
+    B:FireTurret=false
+    B:FireballTurret=false
     B:GatlingTurret=true
-    B:GhastTurret=true
+    B:GhastTurret=false
     B:KillerTurret=true
     B:ObsidianTurret=true
     B:ShotgunTurret=true
