--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -71,6 +71,7 @@ Copper {
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    S:"In game name"=Copper
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
@@ -104,6 +105,7 @@ Gold {
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    S:"In game name"=Gold
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
@@ -126,6 +128,7 @@ Iron {
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    S:"In game name"=Iron
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
@@ -298,6 +301,7 @@ Temporal {
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    S:"In game name"=Temporal
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
@@ -342,6 +346,7 @@ Zinc {
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    S:"In game name"=Zinc
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
