--- a/config/hqm/hqmconfig.cfg
+++ b/config/hqm/hqmconfig.cfg
@@ -8,10 +8,10 @@ general {
     B:"Auto-start questing mode"=false
 
     # How many lives players should start with.
-    I:"Default lives"=3
+    I:"Default lives"=10
 
     # Use this to set the maximum lives obtainable (Max 255)
-    I:MaxLives=20
+    I:MaxLives=255
 
     # Allow every single player in a party to claim the reward for a quest. Setting this to false will give the party one set of rewards to share.
     B:MultiReward=true
@@ -26,7 +26,7 @@ general {
     B:RotTimer=false
 
     # If this is set to true, the server will send the quests to clients connecting to it.
-    B:ServerSync=false
+    B:ServerSync=true
 
     # Use this if you want the book to spawn on create world
     B:SpawnBook=false
