--- a/config/thaumicinfusion.cfg
+++ b/config/thaumicinfusion.cfg
@@ -29,7 +29,7 @@ aspects {
     B:Pannus=true
     B:Perditio=true
     B:Perfodio=true
-    B:Permutatio=true
+    B:Permutatio=false
     B:Potentia=true
     B:Praecantatio=true
     B:Sano=true
@@ -56,6 +56,10 @@ aspects {
 ##########################################################################################################
 
 blocks {
+    B:"%s Flower"=true
+    B:"%s Flower Stigma"=true
+    B:"%s Petal"=true
+    B:"%s Planks"=true
     B:"Abandoned Crate"=true
     B:"Absorption Fluid"=true
     B:"Acacia Wood"=true
@@ -77,12 +81,14 @@ blocks {
     B:"Alpine Currant"=true
     B:"Alpine Thistle"=true
     B:"Aluminium Crop"=true
+    B:"Aluminium Ore"=true
     B:"Amaranth Button"=true
     B:"Amaranth Fence Gate"=true
     B:"Amaranth Pressure Plate"=true
     B:"Amaranth Stairs"=true
     B:"Amaranth Trapdoor"=true
     B:"Amazon Sword"=true
+    B:"Amber Brick Stairs"=true
     B:"Ancient Stone Stairs"=true
     B:"Angel Block"=true
     B:Anvil=true
@@ -115,14 +121,28 @@ blocks {
     B:"Asper Bamboo Slab"=true
     B:"Asper Bamboo Stairs"=true
     B:"Asper Bamboo Wall Bracket"=true
+    B:"Asper Leaves"=true
+    B:"Asper Sapling"=true
+    B:"Asper Slab"=true
+    B:"Asper Stairs"=true
+    B:"Asper Wood"=true
     B:"Australian Bugle"=true
     B:Avocado=true
     B:"Avocado Sapling"=true
     B:Azalea=true
     B:Backpack=true
+    B:"Bamboo Block"=true
     B:"Bamboo Crop"=true
+    B:"Bamboo Slab"=true
+    B:"Bamboo Stairs"=true
+    B:"Bamboo Torch"=true
     B:Banana=true
     B:"Banana Sapling"=true
+    B:"Baobab Leaves"=true
+    B:"Baobab Sapling"=true
+    B:"Baobab Slab"=true
+    B:"Baobab Stairs"=true
+    B:"Baobab Wood"=true
     B:Barberry=true
     B:"Barley Crop"=true
     B:Basalt=true
@@ -182,6 +202,7 @@ blocks {
     B:"Blood Trapdoor"=true
     B:Bloodwood=true
     B:"Bloodwood Door"=true
+    B:"Blooming Nettle"=true
     B:"Blue Candle"=true
     B:"Blue Flowering Vine"=true
     B:"Blue Flowers"=true
@@ -221,6 +242,8 @@ blocks {
     B:"Brown Limestone Brick Stairs"=true
     B:"Brown Limestone Cobblestone Stairs"=true
     B:"Brussel Sprout Crop"=true
+    B:"Bulb Capped Mushroom"=true
+    B:Bullrush=true
     B:"Burgundy Flowering Vine"=true
     B:"Burgundy Flowers"=true
     B:"Burning Love"=true
@@ -307,6 +330,7 @@ blocks {
     B:"Conveyor Belt"=true
     B:"Coon's Tail"=true
     B:"Copper Crop"=true
+    B:"Copper Ore"=true
     B:"Coral Flowering Vine"=true
     B:"Coral Flowers"=true
     B:"Coral Weed"=true
@@ -340,6 +364,11 @@ blocks {
     B:"Cyan Flowers"=true
     B:"Cyan Lamp"=true
     B:"Cylindrical Cedar"=true
+    B:"Cypress Leaves"=true
+    B:"Cypress Sapling"=true
+    B:"Cypress Slab"=true
+    B:"Cypress Stairs"=true
+    B:"Cypress Wood"=true
     B:Dahlia=true
     B:Daisy=true
     B:"Damara's Remedy (Auto)"=true
@@ -370,6 +399,7 @@ blocks {
     B:"Delnas Wood Stairs"=true
     B:Delphinium=true
     B:"Desert Garden"=true
+    B:"Desert Shrub "=true
     B:"Desk Bell"=true
     B:"Destabilized Redstone"=true
     B:Detector=true
@@ -389,10 +419,12 @@ blocks {
     B:"Dragon Egg"=true
     B:Dragonfruit=true
     B:"Dragonfruit Sapling"=true
+    B:"Droughted Shrub"=true
     B:"Duck Potato"=true
     B:Durian=true
     B:"Durian Sapling"=true
     B:"Dusty Miller"=true
+    B:"Dutch Cap Mushroom"=true
     B:"Dwarf Elder"=true
     B:"Dwarf Hair Grass"=true
     B:"Dwarf Palmetto"=true
@@ -425,6 +457,7 @@ blocks {
     B:"Energised Voidstone"=true
     B:"Energised Voidstone Pillar"=true
     B:"Energized Glowstone"=true
+    B:"Erebus Portal"=true
     B:"Essence Crop"=true
     B:"Essence Ore"=true
     B:"Essence Torch"=true
@@ -433,9 +466,13 @@ blocks {
     B:"Eucalyptus Button"=true
     B:"Eucalyptus Door"=true
     B:"Eucalyptus Fence Gate"=true
+    B:"Eucalyptus Leaves"=true
     B:"Eucalyptus Pressure Plate"=true
+    B:"Eucalyptus Sapling"=true
+    B:"Eucalyptus Slab"=true
     B:"Eucalyptus Stairs"=true
     B:"Eucalyptus Trapdoor"=true
+    B:"Eucalyptus Wood"=true
     B:"European Bur-Reed"=true
     B:"Ewcaly Wood Stairs"=true
     B:"Experience Crop"=true
@@ -457,8 +494,10 @@ blocks {
     B:"Feathered Hydroid Coral"=true
     B:Fence=true
     B:"Fence Gate"=true
+    B:Fern=true
     B:"Fertile Soil"=true
     B:"Fertilized Dirt"=true
+    B:Fiddlehead=true
     B:Fig=true
     B:"Fig Sapling"=true
     B:"Filing Cabinet"=true
@@ -467,6 +506,7 @@ blocks {
     B:"Fire Resistance Crop"=true
     B:"Fire Resistance Fluid"=true
     B:"Fire Water"=true
+    B:Firebloom=true
     B:"Fish Bone Cactus"=true
     B:Flax=true
     B:"Flint Block"=true
@@ -479,6 +519,7 @@ blocks {
     B:"Foam Flower"=true
     B:"Force Crop"=true
     B:Forcefield=true
+    B:"Fossil Ore"=true
     B:"Fountain Grass"=true
     B:"Fragrant Fern"=true
     B:"Framed Glass"=true
@@ -495,6 +536,7 @@ blocks {
     B:"Gelid Cryotheum"=true
     B:Geranium=true
     B:"Ghast Soul Crop"=true
+    B:"Ghost Sand"=true
     B:"Ghostwood Button"=true
     B:"Ghostwood Door"=true
     B:"Ghostwood Fence Gate"=true
@@ -520,10 +562,14 @@ blocks {
     B:"Globe Cedar"=true
     B:"Glow Globe"=true
     B:"Glowing Sand"=true
+    B:Glowshroom=true
+    B:"Glowshroom Stalk"=true
     B:Glowstone=true
     B:"Glowstone Crop"=true
     B:Glue=true
     B:"Glue Block"=true
+    B:"Gneiss Ore"=true
+    B:"Gneiss Stairs"=true
     B:"Gold Block"=true
     B:"Gold Crop"=true
     B:"Gold Ore"=true
@@ -542,6 +588,7 @@ blocks {
     B:"Golden Spike"=true
     B:Gooseberry=true
     B:"Gourd Garden"=true
+    B:"Grandma's Shoes Mushroom"=true
     B:"Grape Crop"=true
     B:Grapefruit=true
     B:"Grapefruit Sapling"=true
@@ -569,6 +616,7 @@ blocks {
     B:Grimstone=true
     B:"Ground Garden"=true
     B:Hambone=true
+    B:Hanger=true
     B:"Hardened Clay"=true
     B:"Harlequin Mistletoe"=true
     B:"Harming Fluid"=true
@@ -583,12 +631,16 @@ blocks {
     B:"Hekur Wood Stairs"=true
     B:"Herb Garden"=true
     B:"Hex Plating"=true
+    B:"Hieroglyphic Gneiss Stairs"=true
+    B:"High Capped Mushroom"=true
     B:"High Tide Bush"=true
     B:"Hoary Vervain"=true
     B:"Holiday Cake"=true
+    B:"Hollow Acacia Log"=true
     B:Holly=true
     B:Holystone=true
     B:"Honey Spurge"=true
+    B:"Honey Treat"=true
     B:Hootch=true
     B:"Hopseed Button"=true
     B:"Hopseed Door"=true
@@ -613,10 +665,12 @@ blocks {
     B:"Ice Slab"=true
     B:"Ice Stairs"=true
     B:"Ignis Imbued Fire"=true
+    B:"Ignore Block"=true
     B:"Infernal Glyph"=true
     B:"Infinity Egg"=true
     B:"Infused Shard Crop"=true
     B:"Ingot Storage"=true
+    B:"Insect Repellent Block"=true
     B:"Inverted Black Lamp"=true
     B:"Inverted Blue Lamp"=true
     B:"Inverted Brown Lamp"=true
@@ -633,6 +687,15 @@ blocks {
     B:"Inverted Red Lamp"=true
     B:"Inverted White Lamp"=true
     B:"Inverted Yellow Lamp"=true
+    B:InvisiButton=true
+    B:InvisiDoor=true
+    B:InvisiFence=true
+    B:"InvisiFence Gate"=true
+    B:InvisiLight=true
+    B:InvisiPlate=true
+    B:InvisiShield=true
+    B:InvisiStairs=true
+    B:InvisiTrapper=true
     B:"Invisibility Fluid"=true
     B:"Invisible Block"=true
     B:"Invisible Block (Visible)"=true
@@ -647,6 +710,8 @@ blocks {
     B:Ivy=true
     B:"Jack o'Lantern"=true
     B:"Jacobs Ladder"=true
+    B:"Jade Block"=true
+    B:"Jade Ore"=true
     B:"Japanese Ivy"=true
     B:"Japanese Meadowsweet"=true
     B:"Junction Rail"=true
@@ -655,6 +720,7 @@ blocks {
     B:"Jungle Wood"=true
     B:"Jungle Wood Stairs"=true
     B:"Jungle Wood Wall Bracket"=true
+    B:"Kaizer's Fingers Mushroom"=true
     B:"Kangaroo Fern"=true
     B:"Kangaroo Paw"=true
     B:Kerria=true
@@ -684,8 +750,10 @@ blocks {
     B:Lava=true
     B:Lavastone=true
     B:Lavender=true
+    B:"Layered Gneiss Stairs"=true
     B:"Lazarus Bell"=true
     B:"Lead Crop"=true
+    B:"Lead Ore"=true
     B:Leadplant=true
     B:"Leafy Garden"=true
     B:"Leaping Fluid"=true
@@ -706,6 +774,7 @@ blocks {
     B:"Light Gray Limestone Brick Stairs"=true
     B:"Light Gray Limestone Cobblestone Stairs"=true
     B:"Light Grey Candle"=true
+    B:"Lightning Speed Block"=true
     B:Lily=true
     B:"Lily Pad"=true
     B:"Lily of the Valley"=true
@@ -746,6 +815,11 @@ blocks {
     B:"Magenta Lamp"=true
     B:"Magma Soul Crop"=true
     B:"Magnum Torch"=true
+    B:"Mahogany Leaves"=true
+    B:"Mahogany Sapling"=true
+    B:"Mahogany Slab"=true
+    B:"Mahogany Stairs"=true
+    B:"Mahogany Wood"=true
     B:"Maidenhair Spleenwort"=true
     B:Mandrake=true
     B:"Manganese Crop"=true
@@ -779,6 +853,8 @@ blocks {
     B:Minedrake=true
     B:"Mining Fatigue Fluid"=true
     B:"Mint Crops"=true
+    B:Mirbrick=true
+    B:"Mire Coral"=true
     B:Molten=true
     B:"Molten Aluminum"=true
     B:"Molten Aluminum Brass"=true
@@ -815,10 +891,21 @@ blocks {
     B:"Moso Bamboo Wall Bracket"=true
     B:Moss=true
     B:"Moss Stone"=true
+    B:"Mossbark Leaves"=true
+    B:"Mossbark Sapling"=true
+    B:"Mossbark Slab"=true
+    B:"Mossbark Stairs"=true
+    B:"Mossbark Wood"=true
     B:"Mossy Cobblestone"=true
     B:"Mossy Temple Block"=true
+    B:"Mossy Umbercobble Slab"=true
+    B:"Mossy Umbercobble Stairs"=true
+    B:"Mossy Umberpaver Slab"=true
     B:Mottlecah=true
     B:Mozuku=true
+    B:"Mucus Bomb"=true
+    B:Mud=true
+    B:"Mud Bricks"=true
     B:Mushroom=true
     B:"Mushroom Garden"=true
     B:"Mustard Seeds Crop"=true
@@ -835,6 +922,7 @@ blocks {
     B:"Nether Star Block"=true
     B:"Nether Wart"=true
     B:Netherrack=true
+    B:Nettle=true
     B:"New Guinea Impatiens"=true
     B:"Nickel Crop"=true
     B:"Night Stone"=true
@@ -912,6 +1000,11 @@ blocks {
     B:Persimmon=true
     B:"Persimmon Sapling"=true
     B:"Peruvian Lily"=true
+    B:"Petrified Crafting Table"=true
+    B:"Petrified Wood Ore"=true
+    B:"Petrified Wood Planks"=true
+    B:"Petrified Wood Planks Slab"=true
+    B:"Petrified Wood Stairs"=true
     B:Philodendron=true
     B:"Photovoltaic Cell"=true
     B:Pickerelweed=true
@@ -965,6 +1058,7 @@ blocks {
     B:"Purpled Fantasy Block"=true
     B:"Pyramid Cedar"=true
     B:"Quartz Stairs"=true
+    B:Quicksand=true
     B:Quinoa=true
     B:"Racinaea Fraseri"=true
     B:"Radish Crop"=true
@@ -1000,6 +1094,7 @@ blocks {
     B:"Regeneration Crop"=true
     B:"Regeneration Fluid"=true
     B:"Reinforced Chest"=true
+    B:"Reinforced Exoskeleton Block"=true
     B:"Reinforced Locker"=true
     B:"Reinforced Obsidian"=true
     B:"Resistance Fluid"=true
@@ -1013,6 +1108,9 @@ blocks {
     B:Rockweed=true
     B:Rose=true
     B:"Rose Campion"=true
+    B:"Rotten Slab"=true
+    B:"Rotten Stairs"=true
+    B:"Rotten Wood"=true
     B:"Rowan Stairs"=true
     B:"Rowan Wood Door"=true
     B:"Royal Flowering Vine"=true
@@ -1041,13 +1139,20 @@ blocks {
     B:Sandstone=true
     B:"Sandstone Scribbles"=true
     B:"Sandstone Stairs"=true
+    B:"Sap Leaves"=true
+    B:"Sap Sapling"=true
+    B:"Sap Wood"=true
+    B:"Sapless log"=true
     B:"Sapphire Crop"=true
+    B:"Sarcastic Czech Mushroom"=true
     B:"Sargent Viburnum"=true
     B:"Saturation Fluid"=true
     B:"Savin Juniper"=true
     B:"Scallion Crop"=true
     B:"Scaly Tree Fern"=true
     B:"Scarlet Trumpet"=true
+    B:"Scorched Planks"=true
+    B:"Scorched Wood"=true
     B:"Scorching Block"=true
     B:"Sea Grapes"=true
     B:"Sea Lavender"=true
@@ -1073,8 +1178,12 @@ blocks {
     B:"Short-Tassled Bamboo Wall Bracket"=true
     B:"Shortray Fleabane"=true
     B:Shrub=true
+    B:Silk=true
+    B:"Silo Roof"=true
+    B:"Silo Supports"=true
     B:"Silver Crop"=true
     B:"Silver Moor Grass"=true
+    B:"Silver Ore"=true
     B:"Silver Vase"=true
     B:"Silverbell Button"=true
     B:"Silverbell Fence Gate"=true
@@ -1085,6 +1194,7 @@ blocks {
     B:"Silverwood Stairs"=true
     B:"Simplestem Bur-Reed"=true
     B:"Skeleton Soul Crop"=true
+    B:"Slabbed Gneiss Stairs"=true
     B:"Slime Channel"=true
     B:"Slime Soul Crop"=true
     B:"Slowness Fluid"=true
@@ -1093,6 +1203,9 @@ blocks {
     B:"Smokey Quartz Slab"=true
     B:"Smokey Quartz Stairs"=true
     B:"Smooth Aster"=true
+    B:"Smooth Gneiss Stairs"=true
+    B:"Smooth Umbertile Stairs"=true
+    B:"Smooth Umbertiles Stairs"=true
     B:Snow=true
     B:"Snow Double Slab"=true
     B:"Snow Pole"=true
@@ -1154,8 +1267,10 @@ blocks {
     B:"Sulfur Crop"=true
     B:"Sulphur Shelf"=true
     B:"Sun Polyps"=true
+    B:Sundew=true
     B:"Sunstone Crop"=true
     B:"Swamp Milkweed"=true
+    B:"Swamp Plant"=true
     B:"Swedish Ivy"=true
     B:"Sweet Potato Crop"=true
     B:"Sweetcorn Crop"=true
@@ -1171,12 +1286,17 @@ blocks {
     B:"Tan Limestone Brick Stairs"=true
     B:"Tan Limestone Cobblestone Stairs"=true
     B:Tangle=true
+    B:"Tangled Stalk Mushrooms"=true
     B:Target=true
     B:Taro=true
     B:"Tea Leaf Crop"=true
     B:"Tea Tree"=true
     B:"Technical Block"=true
     B:"Temple Block"=true
+    B:"Temple Brick"=true
+    B:"Temple Ore"=true
+    B:"Temple Pillar"=true
+    B:"Temple Tile"=true
     B:"Terra Imbued Fire"=true
     B:"Texas Tickseed"=true
     B:"Textile Garden"=true
@@ -1185,6 +1305,7 @@ blocks {
     B:"Thaumium Chest"=true
     B:"Thin Crystal Glass"=true
     B:"Thin Framed Glass"=true
+    B:Thorns=true
     B:Thornvines=true
     B:"Thorny Fence"=true
     B:"Three-Flowered Avens"=true
@@ -1193,6 +1314,7 @@ blocks {
     B:"Tigerwood Pressure Plate"=true
     B:"Tigerwood Stairs"=true
     B:"Tigerwood Trapdoor"=true
+    B:"Tiled Gneiss Stairs"=true
     B:"Tillandsia Ionantha"=true
     B:"Tilled Fertile Soil"=true
     B:"Time Sand"=true
@@ -1207,6 +1329,7 @@ blocks {
     B:"Timor Black Bamboo Stairs"=true
     B:"Timor Black Bamboo Wall Bracket"=true
     B:"Tin Crop"=true
+    B:"Tin Ore"=true
     B:Tomato=true
     B:"Tomato Crop"=true
     B:"Toothpick Cactus"=true
@@ -1236,10 +1359,20 @@ blocks {
     B:"Tuopa Wood Stairs"=true
     B:"Turkey Tail"=true
     B:"Turnip Crop"=true
+    B:Turnips=true
     B:Twig=true
     B:Tyrian=true
+    B:"Umbercobble Slab"=true
+    B:"Umbercobble Stairs"=true
+    B:"Umberpaver Slab"=true
+    B:"Umberstone Button"=true
+    B:"Umberstone Pillar"=true
+    B:"Umberstone Slab"=true
+    B:"Umberstone Stairs"=true
     B:"Umbral Rose"=true
     B:"Umbral Rose Bush"=true
+    B:"Umbricks Slab"=true
+    B:"Umbricks Stairs"=true
     B:"Unnamed Block, report to mod author."=true
     B:"Uranium Crop"=true
     B:"Vacuum Chest"=true
@@ -1247,6 +1380,8 @@ blocks {
     B:"Vanilla Leaf"=true
     B:"Vanilla Sapling"=true
     B:"Variegated Persian Ivy"=true
+    B:"Varnished Planks"=true
+    B:"Velocity Block"=true
     B:Vine=true
     B:Vines=true
     B:"Vinteum Crop"=true
@@ -1254,11 +1389,15 @@ blocks {
     B:"Void Stone"=true
     B:"Void Stone Pillar"=true
     B:Voidstone=true
+    B:"Volcanic Diamond Ore"=true
+    B:"Volcanic Rock"=true
     B:"Voodoo Lily"=true
     B:Walnut=true
     B:"Walnut Sapling"=true
     B:"Warning Sign"=true
     B:Wasabi=true
+    B:"Wasp Nest Block"=true
+    B:"Wasp Nest Stairs"=true
     B:Water=true
     B:"Water Artichoke"=true
     B:"Water Breathing Crop"=true
@@ -1277,7 +1416,10 @@ blocks {
     B:Waterstone=true
     B:"Weakness Fluid"=true
     B:Web=true
+    B:"Webbed Umbercobble Slab"=true
+    B:"Webbed Umbercobble Stairs"=true
     B:Weed=true
+    B:"Weeping Blue"=true
     B:"Weeping Forsythia"=true
     B:"Weeping Milk Cap"=true
     B:"Weighted Pressure Plate (Heavy)"=true
@@ -1299,6 +1441,8 @@ blocks {
     B:"White Lamp"=true
     B:"White Mushroom Crop"=true
     B:"White Sage"=true
+    B:"White Slab"=true
+    B:"White Stairs"=true
     B:"White Turtlehead"=true
     B:"Wild Carrot"=true
     B:"Wild Columbine"=true
@@ -1318,8 +1462,10 @@ blocks {
     B:"Wireless Charger"=true
     B:"Wispy Cotton"=true
     B:"Wither Soul Crop"=true
+    B:"Wither Web"=true
     B:"Wolf Willow"=true
     B:"Wolf's-foot Clubmoss"=true
+    B:Wolfsbane=true
     B:Wood=true
     B:"Wood Blewit"=true
     B:"Wood Double Slab"=true
@@ -1381,6 +1527,7 @@ blocks {
     B:tile.TConstruct.Soil.name=true
     B:tile.air.name=true
     B:tile.alchemyCatalyst.name=true
+    B:tile.anchor.name=true
     B:tile.artifice.basalt.doubleslab.name=true
     B:tile.artifice.basalt.slab.name=true
     B:tile.artifice.enderore.glowing.name=true
@@ -1517,6 +1664,39 @@ blocks {
     B:tile.dreamwood1Stairs.name=true
     B:tile.electricfence.name=true
     B:tile.elfGlass.name=true
+    B:tile.erebus.amber.name=true
+    B:tile.erebus.bambooShoot.name=true
+    B:tile.erebus.dooramber.name=true
+    B:tile.erebus.doorasper.name=true
+    B:tile.erebus.doorbaobab.name=true
+    B:tile.erebus.doorcypress.name=true
+    B:tile.erebus.dooreucalyptus.name=true
+    B:tile.erebus.doormahogany.name=true
+    B:tile.erebus.doormossbark.name=true
+    B:tile.erebus.doorpetrified.name=true
+    B:tile.erebus.doorrotten.name=true
+    B:tile.erebus.doorscorched.name=true
+    B:tile.erebus.glowshroomStalkDown1.name=true
+    B:tile.erebus.glowshroomStalkDown2.name=true
+    B:tile.erebus.glowshroomStalkDown3.name=true
+    B:tile.erebus.glowshroomStalkE1.name=true
+    B:tile.erebus.glowshroomStalkE3.name=true
+    B:tile.erebus.glowshroomStalkN1.name=true
+    B:tile.erebus.glowshroomStalkN3.name=true
+    B:tile.erebus.glowshroomStalkNS2.name=true
+    B:tile.erebus.glowshroomStalkS1.name=true
+    B:tile.erebus.glowshroomStalkS3.name=true
+    B:tile.erebus.glowshroomStalkW1.name=true
+    B:tile.erebus.glowshroomStalkW3.name=true
+    B:tile.erebus.glowshroomStalkWE2.name=true
+    B:tile.erebus.gneiss.name=true
+    B:tile.erebus.honeyBlock.name=true
+    B:tile.erebus.redGem.name=true
+    B:tile.erebus.umberPaver.name=true
+    B:tile.erebus.umberstone.name=true
+    B:tile.erebus.wallErebus.name=true
+    B:tile.erebus.wallPlants.name=true
+    B:tile.erebus.waterFlower.name=true
     B:"tile.extrautils:budoff.name"=true
     B:"tile.extrautils:cobblestone_compressed.name"=true
     B:"tile.extrautils:colorStoneBrick.name"=true
@@ -1710,6 +1890,11 @@ blocks {
     B:tile.woodSlab.name=true
     B:tile.woolCarpet.name=true
     B:tile.yellowGlow.name=true
+}
+
+
+networking {
+    I:"Packet Timeout"=10000
 }
 
 
