--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -335,8 +335,6 @@ shedding {
     I:RandomThings.spirit.lexiconDisplaySize=40
     I:RandomThings.spirit.metadata=0
     I:RandomThings.spirit.rate=-1
-
-    # Configuration of Shedding for SWWolf
     S:SWWolf.item=
     I:SWWolf.lexiconDisplaySize=40
     I:SWWolf.metadata=0
@@ -857,20 +855,14 @@ shedding {
     I:Squid.lexiconDisplaySize=20
     I:Squid.metadata=0
     I:Squid.rate=18000
-
-    # Configuration of Shedding for TConstruct.Crystal
     S:TConstruct.Crystal.item=
     I:TConstruct.Crystal.lexiconDisplaySize=40
     I:TConstruct.Crystal.metadata=0
     I:TConstruct.Crystal.rate=-1
-
-    # Configuration of Shedding for TConstruct.EdibleSlime
     S:TConstruct.EdibleSlime.item=
     I:TConstruct.EdibleSlime.lexiconDisplaySize=40
     I:TConstruct.EdibleSlime.metadata=0
     I:TConstruct.EdibleSlime.rate=-1
-
-    # Configuration of Shedding for TConstruct.KingSlime
     S:TConstruct.KingSlime.item=
     I:TConstruct.KingSlime.lexiconDisplaySize=40
     I:TConstruct.KingSlime.metadata=0
@@ -1313,62 +1305,42 @@ shedding {
     I:Zombie.lexiconDisplaySize=40
     I:Zombie.metadata=0
     I:Zombie.rate=-1
-
-    # Configuration of Shedding for atum.banditArcher
     S:atum.banditArcher.item=
     I:atum.banditArcher.lexiconDisplaySize=40
     I:atum.banditArcher.metadata=0
     I:atum.banditArcher.rate=-1
-
-    # Configuration of Shedding for atum.banditWarlord
     S:atum.banditWarlord.item=
     I:atum.banditWarlord.lexiconDisplaySize=40
     I:atum.banditWarlord.metadata=0
     I:atum.banditWarlord.rate=-1
-
-    # Configuration of Shedding for atum.banditWarrior
     S:atum.banditWarrior.item=
     I:atum.banditWarrior.lexiconDisplaySize=40
     I:atum.banditWarrior.metadata=0
     I:atum.banditWarrior.rate=-1
-
-    # Configuration of Shedding for atum.barbarian
     S:atum.barbarian.item=
     I:atum.barbarian.lexiconDisplaySize=40
     I:atum.barbarian.metadata=0
     I:atum.barbarian.rate=-1
-
-    # Configuration of Shedding for atum.desertGhost
     S:atum.desertGhost.item=
     I:atum.desertGhost.lexiconDisplaySize=40
     I:atum.desertGhost.metadata=0
     I:atum.desertGhost.rate=-1
-
-    # Configuration of Shedding for atum.desertWolf
     S:atum.desertWolf.item=
     I:atum.desertWolf.lexiconDisplaySize=40
     I:atum.desertWolf.metadata=0
     I:atum.desertWolf.rate=-1
-
-    # Configuration of Shedding for atum.dustySkeleton
     S:atum.dustySkeleton.item=
     I:atum.dustySkeleton.lexiconDisplaySize=40
     I:atum.dustySkeleton.metadata=0
     I:atum.dustySkeleton.rate=-1
-
-    # Configuration of Shedding for atum.mummy
     S:atum.mummy.item=
     I:atum.mummy.lexiconDisplaySize=40
     I:atum.mummy.metadata=0
     I:atum.mummy.rate=-1
-
-    # Configuration of Shedding for atum.pharaoh
     S:atum.pharaoh.item=
     I:atum.pharaoh.lexiconDisplaySize=40
     I:atum.pharaoh.metadata=0
     I:atum.pharaoh.rate=-1
-
-    # Configuration of Shedding for atum.stoneSoldier
     S:atum.stoneSoldier.item=
     I:atum.stoneSoldier.lexiconDisplaySize=40
     I:atum.stoneSoldier.metadata=0
@@ -1431,6 +1403,300 @@ shedding {
     I:enderzoo.WitherWitch.lexiconDisplaySize=40
     I:enderzoo.WitherWitch.metadata=0
     I:enderzoo.WitherWitch.rate=-1
+
+    # Configuration of Shedding for erebus.animatedBambooCrate
+    S:erebus.animatedBambooCrate.item=
+    I:erebus.animatedBambooCrate.lexiconDisplaySize=40
+    I:erebus.animatedBambooCrate.metadata=0
+    I:erebus.animatedBambooCrate.rate=-1
+
+    # Configuration of Shedding for erebus.animatedBlock
+    S:erebus.animatedBlock.item=
+    I:erebus.animatedBlock.lexiconDisplaySize=40
+    I:erebus.animatedBlock.metadata=0
+    I:erebus.animatedBlock.rate=-1
+
+    # Configuration of Shedding for erebus.animatedChest
+    S:erebus.animatedChest.item=
+    I:erebus.animatedChest.lexiconDisplaySize=40
+    I:erebus.animatedChest.metadata=0
+    I:erebus.animatedChest.rate=-1
+
+    # Configuration of Shedding for erebus.antlion
+    S:erebus.antlion.item=
+    I:erebus.antlion.lexiconDisplaySize=40
+    I:erebus.antlion.metadata=0
+    I:erebus.antlion.rate=-1
+
+    # Configuration of Shedding for erebus.antlionMiniBoss
+    S:erebus.antlionMiniBoss.item=
+    I:erebus.antlionMiniBoss.lexiconDisplaySize=40
+    I:erebus.antlionMiniBoss.metadata=0
+    I:erebus.antlionMiniBoss.rate=-1
+
+    # Configuration of Shedding for erebus.beetle
+    S:erebus.beetle.item=
+    I:erebus.beetle.lexiconDisplaySize=40
+    I:erebus.beetle.metadata=0
+    I:erebus.beetle.rate=-1
+
+    # Configuration of Shedding for erebus.beetleLarva
+    S:erebus.beetleLarva.item=
+    I:erebus.beetleLarva.lexiconDisplaySize=40
+    I:erebus.beetleLarva.metadata=0
+    I:erebus.beetleLarva.rate=-1
+
+    # Configuration of Shedding for erebus.blackAnt
+    S:erebus.blackAnt.item=
+    I:erebus.blackAnt.lexiconDisplaySize=40
+    I:erebus.blackAnt.metadata=0
+    I:erebus.blackAnt.rate=-1
+
+    # Configuration of Shedding for erebus.blackWidow
+    S:erebus.blackWidow.item=
+    I:erebus.blackWidow.lexiconDisplaySize=40
+    I:erebus.blackWidow.metadata=0
+    I:erebus.blackWidow.rate=-1
+
+    # Configuration of Shedding for erebus.bloodSnail
+    S:erebus.bloodSnail.item=
+    I:erebus.bloodSnail.lexiconDisplaySize=40
+    I:erebus.bloodSnail.metadata=0
+    I:erebus.bloodSnail.rate=-1
+
+    # Configuration of Shedding for erebus.botFly
+    S:erebus.botFly.item=
+    I:erebus.botFly.lexiconDisplaySize=40
+    I:erebus.botFly.metadata=0
+    I:erebus.botFly.rate=-1
+
+    # Configuration of Shedding for erebus.botFlyLarva
+    S:erebus.botFlyLarva.item=
+    I:erebus.botFlyLarva.lexiconDisplaySize=40
+    I:erebus.botFlyLarva.metadata=0
+    I:erebus.botFlyLarva.rate=-1
+
+    # Configuration of Shedding for erebus.centipede
+    S:erebus.centipede.item=
+    I:erebus.centipede.lexiconDisplaySize=40
+    I:erebus.centipede.metadata=0
+    I:erebus.centipede.rate=-1
+
+    # Configuration of Shedding for erebus.chameleonTick
+    S:erebus.chameleonTick.item=
+    I:erebus.chameleonTick.lexiconDisplaySize=40
+    I:erebus.chameleonTick.metadata=0
+    I:erebus.chameleonTick.rate=-1
+
+    # Configuration of Shedding for erebus.cicada
+    S:erebus.cicada.item=
+    I:erebus.cicada.lexiconDisplaySize=40
+    I:erebus.cicada.metadata=0
+    I:erebus.cicada.rate=-1
+
+    # Configuration of Shedding for erebus.crushroom
+    S:erebus.crushroom.item=
+    I:erebus.crushroom.lexiconDisplaySize=40
+    I:erebus.crushroom.metadata=0
+    I:erebus.crushroom.rate=-1
+
+    # Configuration of Shedding for erebus.dragonfly
+    S:erebus.dragonfly.item=
+    I:erebus.dragonfly.lexiconDisplaySize=40
+    I:erebus.dragonfly.metadata=0
+    I:erebus.dragonfly.rate=-1
+
+    # Configuration of Shedding for erebus.extractedBlock
+    S:erebus.extractedBlock.item=
+    I:erebus.extractedBlock.lexiconDisplaySize=40
+    I:erebus.extractedBlock.metadata=0
+    I:erebus.extractedBlock.rate=-1
+
+    # Configuration of Shedding for erebus.fireAnt
+    S:erebus.fireAnt.item=
+    I:erebus.fireAnt.lexiconDisplaySize=40
+    I:erebus.fireAnt.metadata=0
+    I:erebus.fireAnt.rate=-1
+
+    # Configuration of Shedding for erebus.fireAntSoldier
+    S:erebus.fireAntSoldier.item=
+    I:erebus.fireAntSoldier.lexiconDisplaySize=40
+    I:erebus.fireAntSoldier.metadata=0
+    I:erebus.fireAntSoldier.rate=-1
+
+    # Configuration of Shedding for erebus.fly
+    S:erebus.fly.item=
+    I:erebus.fly.lexiconDisplaySize=40
+    I:erebus.fly.metadata=0
+    I:erebus.fly.rate=-1
+
+    # Configuration of Shedding for erebus.glowWorm
+    S:erebus.glowWorm.item=
+    I:erebus.glowWorm.lexiconDisplaySize=40
+    I:erebus.glowWorm.metadata=0
+    I:erebus.glowWorm.rate=-1
+
+    # Configuration of Shedding for erebus.grasshopper
+    S:erebus.grasshopper.item=
+    I:erebus.grasshopper.lexiconDisplaySize=40
+    I:erebus.grasshopper.metadata=0
+    I:erebus.grasshopper.rate=-1
+
+    # Configuration of Shedding for erebus.jumpingSpider
+    S:erebus.jumpingSpider.item=
+    I:erebus.jumpingSpider.lexiconDisplaySize=40
+    I:erebus.jumpingSpider.metadata=0
+    I:erebus.jumpingSpider.rate=-1
+
+    # Configuration of Shedding for erebus.lavaWebSpider
+    S:erebus.lavaWebSpider.item=
+    I:erebus.lavaWebSpider.lexiconDisplaySize=40
+    I:erebus.lavaWebSpider.metadata=0
+    I:erebus.lavaWebSpider.rate=-1
+
+    # Configuration of Shedding for erebus.locust
+    S:erebus.locust.item=
+    I:erebus.locust.lexiconDisplaySize=40
+    I:erebus.locust.metadata=0
+    I:erebus.locust.rate=-1
+
+    # Configuration of Shedding for erebus.midgeSwarm
+    S:erebus.midgeSwarm.item=
+    I:erebus.midgeSwarm.lexiconDisplaySize=40
+    I:erebus.midgeSwarm.metadata=0
+    I:erebus.midgeSwarm.rate=-1
+
+    # Configuration of Shedding for erebus.moneySpider
+    S:erebus.moneySpider.item=
+    I:erebus.moneySpider.lexiconDisplaySize=40
+    I:erebus.moneySpider.metadata=0
+    I:erebus.moneySpider.rate=-1
+
+    # Configuration of Shedding for erebus.mosquito
+    S:erebus.mosquito.item=
+    I:erebus.mosquito.lexiconDisplaySize=40
+    I:erebus.mosquito.metadata=0
+    I:erebus.mosquito.rate=-1
+
+    # Configuration of Shedding for erebus.moth
+    S:erebus.moth.item=
+    I:erebus.moth.lexiconDisplaySize=40
+    I:erebus.moth.metadata=0
+    I:erebus.moth.rate=-1
+
+    # Configuration of Shedding for erebus.prayingMantis
+    S:erebus.prayingMantis.item=
+    I:erebus.prayingMantis.lexiconDisplaySize=40
+    I:erebus.prayingMantis.metadata=0
+    I:erebus.prayingMantis.rate=-1
+
+    # Configuration of Shedding for erebus.punchroom
+    S:erebus.punchroom.item=
+    I:erebus.punchroom.lexiconDisplaySize=40
+    I:erebus.punchroom.metadata=0
+    I:erebus.punchroom.rate=-1
+
+    # Configuration of Shedding for erebus.rhinoBeetle
+    S:erebus.rhinoBeetle.item=
+    I:erebus.rhinoBeetle.lexiconDisplaySize=40
+    I:erebus.rhinoBeetle.metadata=0
+    I:erebus.rhinoBeetle.rate=-1
+
+    # Configuration of Shedding for erebus.scorpion
+    S:erebus.scorpion.item=
+    I:erebus.scorpion.lexiconDisplaySize=40
+    I:erebus.scorpion.metadata=0
+    I:erebus.scorpion.rate=-1
+
+    # Configuration of Shedding for erebus.scytodes
+    S:erebus.scytodes.item=
+    I:erebus.scytodes.lexiconDisplaySize=40
+    I:erebus.scytodes.metadata=0
+    I:erebus.scytodes.rate=-1
+
+    # Configuration of Shedding for erebus.solifuge
+    S:erebus.solifuge.item=
+    I:erebus.solifuge.lexiconDisplaySize=40
+    I:erebus.solifuge.metadata=0
+    I:erebus.solifuge.rate=-1
+
+    # Configuration of Shedding for erebus.solifugeSmall
+    S:erebus.solifugeSmall.item=
+    I:erebus.solifugeSmall.lexiconDisplaySize=40
+    I:erebus.solifugeSmall.metadata=0
+    I:erebus.solifugeSmall.rate=-1
+
+    # Configuration of Shedding for erebus.sporeling
+    S:erebus.sporeling.item=
+    I:erebus.sporeling.lexiconDisplaySize=40
+    I:erebus.sporeling.metadata=0
+    I:erebus.sporeling.rate=-1
+
+    # Configuration of Shedding for erebus.tarantula
+    S:erebus.tarantula.item=
+    I:erebus.tarantula.lexiconDisplaySize=40
+    I:erebus.tarantula.metadata=0
+    I:erebus.tarantula.rate=-1
+
+    # Configuration of Shedding for erebus.tarantulababy
+    S:erebus.tarantulababy.item=
+    I:erebus.tarantulababy.lexiconDisplaySize=40
+    I:erebus.tarantulababy.metadata=0
+    I:erebus.tarantulababy.rate=-1
+
+    # Configuration of Shedding for erebus.tarantulaminiboss
+    S:erebus.tarantulaminiboss.item=
+    I:erebus.tarantulaminiboss.lexiconDisplaySize=40
+    I:erebus.tarantulaminiboss.metadata=0
+    I:erebus.tarantulaminiboss.rate=-1
+
+    # Configuration of Shedding for erebus.titanBeetle
+    S:erebus.titanBeetle.item=
+    I:erebus.titanBeetle.lexiconDisplaySize=40
+    I:erebus.titanBeetle.metadata=0
+    I:erebus.titanBeetle.rate=-1
+
+    # Configuration of Shedding for erebus.umberGolem
+    S:erebus.umberGolem.item=
+    I:erebus.umberGolem.lexiconDisplaySize=40
+    I:erebus.umberGolem.metadata=0
+    I:erebus.umberGolem.rate=-1
+
+    # Configuration of Shedding for erebus.velvetWorm
+    S:erebus.velvetWorm.item=
+    I:erebus.velvetWorm.lexiconDisplaySize=40
+    I:erebus.velvetWorm.metadata=0
+    I:erebus.velvetWorm.rate=-1
+
+    # Configuration of Shedding for erebus.wasp
+    S:erebus.wasp.item=
+    I:erebus.wasp.lexiconDisplaySize=40
+    I:erebus.wasp.metadata=0
+    I:erebus.wasp.rate=-1
+
+    # Configuration of Shedding for erebus.wheatWeevil
+    S:erebus.wheatWeevil.item=
+    I:erebus.wheatWeevil.lexiconDisplaySize=40
+    I:erebus.wheatWeevil.metadata=0
+    I:erebus.wheatWeevil.rate=-1
+
+    # Configuration of Shedding for erebus.woodlouse
+    S:erebus.woodlouse.item=
+    I:erebus.woodlouse.lexiconDisplaySize=40
+    I:erebus.woodlouse.metadata=0
+    I:erebus.woodlouse.rate=-1
+
+    # Configuration of Shedding for erebus.workerBee
+    S:erebus.workerBee.item=
+    I:erebus.workerBee.lexiconDisplaySize=40
+    I:erebus.workerBee.metadata=0
+    I:erebus.workerBee.rate=-1
+
+    # Configuration of Shedding for erebus.zombieAnt
+    S:erebus.zombieAnt.item=
+    I:erebus.zombieAnt.lexiconDisplaySize=40
+    I:erebus.zombieAnt.metadata=0
+    I:erebus.zombieAnt.rate=-1
     S:ggutils.creeper_mite.item=
     I:ggutils.creeper_mite.lexiconDisplaySize=40
     I:ggutils.creeper_mite.metadata=0
@@ -1631,8 +1897,6 @@ shedding {
     I:steamcraft2.FleshGolem.lexiconDisplaySize=40
     I:steamcraft2.FleshGolem.metadata=0
     I:steamcraft2.FleshGolem.rate=-1
-
-    # Configuration of Shedding for testdummy.Dummy
     S:testdummy.Dummy.item=
     I:testdummy.Dummy.lexiconDisplaySize=40
     I:testdummy.Dummy.metadata=0
@@ -1727,6 +1991,12 @@ shedding {
     I:witchery.goblinmog.lexiconDisplaySize=40
     I:witchery.goblinmog.metadata=0
     I:witchery.goblinmog.rate=-1
+
+    # Configuration of Shedding for witchery.hellhound
+    S:witchery.hellhound.item=
+    I:witchery.hellhound.lexiconDisplaySize=40
+    I:witchery.hellhound.metadata=0
+    I:witchery.hellhound.rate=-1
 
     # Configuration of Shedding for witchery.hornedHuntsman
     S:witchery.hornedHuntsman.item=
@@ -1836,11 +2106,23 @@ shedding {
     I:witchery.treefyd.metadata=0
     I:witchery.treefyd.rate=-1
 
+    # Configuration of Shedding for witchery.werevillager
+    S:witchery.werevillager.item=
+    I:witchery.werevillager.lexiconDisplaySize=40
+    I:witchery.werevillager.metadata=0
+    I:witchery.werevillager.rate=-1
+
     # Configuration of Shedding for witchery.witchhunter
     S:witchery.witchhunter.item=
     I:witchery.witchhunter.lexiconDisplaySize=40
     I:witchery.witchhunter.metadata=0
     I:witchery.witchhunter.rate=-1
+
+    # Configuration of Shedding for witchery.wolfman
+    S:witchery.wolfman.item=
+    I:witchery.wolfman.lexiconDisplaySize=40
+    I:witchery.wolfman.metadata=0
+    I:witchery.wolfman.rate=-1
 }
 
 
