--- a/config/quiverchevsky.cfg
+++ b/config/quiverchevsky.cfg
@@ -1,7 +1,7 @@
 # Configuration file
 
 "aqua accelerator" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How fast are my projectiles? (default 1.5 BPT (Blocks Per Tick))"=1.5
     S:"What's my name?"=Aqua Accelerator
 }
@@ -30,7 +30,7 @@ auto-crossbow {
 
 
 "blaze crossbow" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How fast are my projectiles? (default 2.5 BPT (Blocks Per Tick))"=2.5
     I:"How hard do I knock the target back when firing? (default 2)"=2
     I:"How long do I keep burning when stuck in the ground? (default 10 sec)"=10
@@ -81,7 +81,7 @@ auto-crossbow {
 
 
 "dragon box" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How big are my explosions? (default 1.0 blocks, for no terrain damage. TNT is 4.0 blocks)"=1.0
     D:"How fast are my projectiles? (default 1.3 BPT (Blocks Per Tick))"=1.3
     I:"How hard do I kick the user back when firing? (default 1)"=1
@@ -95,7 +95,7 @@ auto-crossbow {
 
 
 "dragon mortar" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How big are my explosions? (default 1.0 blocks, for no terrain damage. TNT is 4.0 blocks)"=1.0
     D:"How fast are my projectiles? (default 1.5 BPT (Blocks Per Tick))"=1.5
     I:"How hard do I kick the user back when firing? (default 3)"=3
@@ -117,15 +117,15 @@ auto-crossbow {
 
 "ender rifle" {
     B:"Am I enabled? (default true)"=true
-    D:"By what amount does my damage rise? (default 1.0, for +1.0 DMG per tick of flight)"=1.0
-    I:"How far can I zoom in? (default 30. Less means more zoom)"=30
-    D:"How fast are my projectiles? (default 3.0 BPT (Blocks Per Tick))"=3.0
+    D:"By what amount does my damage rise? (default 1.0, for +1.0 DMG per tick of flight)"=2.0
+    I:"How far can I zoom in? (default 30. Less means more zoom)"=10
+    D:"How fast are my projectiles? (default 3.0 BPT (Blocks Per Tick))"=6.0
     I:"How hard do I kick the user back when firing? (default 3)"=3
     I:"How hard do I knock the target back when firing? (default 1)"=1
     I:"How long until I can fire again? (default 25 ticks)"=25
     I:"What damage am I dealing, at least? (default 4)"=4
     I:"What damage am I dealing, tops? (default 16)"=16
-    S:"What's my name?"=Ender Rifle
+    S:"What's my name?"=Ender Sniper
 }
 
 
@@ -140,7 +140,7 @@ auto-crossbow {
 
 
 "fireworks rocket launcher" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How big are my explosions? (default 4.0 blocks, like TNT)"=4.0
     D:"How fast are my projectiles? (default 2.0 BPT (Blocks Per Tick))"=2.0
     I:"How hard do I kick the user back when firing? (default 3)"=3
@@ -176,12 +176,12 @@ auto-crossbow {
 generic {
     B:"Are we removing disabled weapons from the creative menu too? (default false. On there, but uncraftable)"=false
     B:"Are we using models or icons for held weapons? (default true for models. False for icons)"=true
-    B:"Can we break glass and other fragile things with our projectiles? (default true)"=true
+    B:"Can we break glass and other fragile things with our projectiles? (default true)"=false
 }
 
 
 "improved rocket launcher" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How big are my explosions? (default 4.0 blocks, like TNT)"=4.0
     D:"How fast are my projectiles? (default 2.0 BPT (Blocks Per Tick))"=2.0
     I:"How hard do I kick the user back when firing? (default 3)"=3
@@ -204,7 +204,7 @@ generic {
 
 
 "lightning red" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     D:"How fast are my projectiles? (default 5.0 BPT (Blocks Per Tick))"=5.0
     I:"How hard do I kick the user back when firing? (default 3)"=3
     I:"How long does my beam exist, tops? (default 60 ticks)"=60
@@ -238,7 +238,7 @@ generic {
 
 
 "nether bellows" {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     I:"For how long do I set things on fire? (default 3 sec)"=3
     D:"How fast are my projectiles? (default 0.5 BPT (Blocks Per Tick))"=0.5
     I:"What damage am I dealing per projectile? (default 1)"=1
@@ -380,7 +380,7 @@ seedling {
 
 
 sunray {
-    B:"Am I enabled? (default true)"=true
+    B:"Am I enabled? (default true)"=false
     I:"How hard do I kick the user back when firing? (default 3)"=3
     I:"How long does my beam exist, tops? (default 60 ticks)"=60
     I:"How long is what I hit on fire? (default 10s)"=10
