--- a/config/witchery.cfg
+++ b/config/witchery.cfg
@@ -17,9 +17,11 @@ general {
     B:AllowModThaumcraft=true
     B:AllowModTreecapitator=true
     B:AllowVoidBrambleRecipe=false
+    B:AllowVolatilityPotionBlockDamage=true
     I:ApothecaryVillagerID=2435
     I:BranchGlyphSet=0
     I:CovenWitchSpawnWeight=2
+    B:CreeperHeartsExplodeWithDamageWhenEaten=true
     B:DecurseDirectedEnabled=false
     I:DecurseDirectedProtectRadius=32
     B:DecurseTeleportPullEnabled=false
@@ -33,9 +35,11 @@ general {
     B:GenerateShacks=true
     B:GenerateWickerMen=true
     B:GenerateWitchHuts=true
+    I:HellhoundSpawnWeight=50
     I:HobgoblinGodSpawnChance=10
     I:HobgoblinSpawnChance=2
     I:HobgoblinSpawnWeight=4
+    D:MantrapOpacity=0.3
     S:MutandisAdditionalBlocks <
         witchery:glintweed,0
         tallgrass,2
@@ -101,6 +105,7 @@ potions {
     I:"witchery:potion.swimming"=54
     I:"witchery:potion.volatility"=59
     I:"witchery:potion.wakingnightmare"=52
+    I:"witchery:potion.wolfsbane"=75
     I:"witchery:potion.worship"=73
     I:"witchery:potion.wrappedinvine"=33
 }
