--- a/config/thaumicinfusion.cfg
+++ b/config/thaumicinfusion.cfg
@@ -411,6 +411,7 @@ blocks {
     B:"Diamond Crop"=true
     B:"Diamond Ore"=true
     B:"Diamond Spike"=true
+    B:"Dimensional Pocket"=true
     B:"Dimensional Transceiver (Deprecated)"=true
     B:Dirt=true
     B:Disassembler=true
@@ -965,6 +966,7 @@ blocks {
     B:"Osmium Crop"=true
     B:"Ostrich Fern"=true
     B:"Otherwhere Glyph"=true
+    B:"Outside Of The Block"=true
     B:"Packed Ice"=true
     B:"Pale Yucca"=true
     B:"Palm Leaves"=true
@@ -1894,6 +1896,7 @@ blocks {
 
 
 networking {
+    # How many times a single block can send a packet per update, the lower the numbers, the faster an infused or essentia block will be update however can cause lag
     I:"Packet Timeout"=10000
 }
 
