--- a/config/Loot++/furnace_recipes.cfg
+++ b/config/Loot++/furnace_recipes.cfg
@@ -326,6 +326,7 @@ default_smelting_recipes {
     S:"Input: minecraft:soul_sand with damage: 0, Output: Natura:NetherGlass with damage: 0"=1-0.0
     S:"Input: minecraft:stone with damage: 32767, Output: ProjRed|Core:projectred.core.part with damage: 0"=2-0.0
     S:"Input: witchery:ingredient with damage: 102, Output: minecraft:gold_nugget with damage: 0"=1-0.0
+    S:"Input: witchery:ingredient with damage: 158, Output: witchery:ingredient with damage: 159"=1-0.0
     S:"Input: witchery:ingredient with damage: 26, Output: witchery:ingredient with damage: 27"=1-0.0
     S:"Input: witchery:ingredient with damage: 50, Output: witchery:ingredient with damage: 51"=1-0.0
     S:"Input: witchery:witchlog with damage: 0, Output: minecraft:coal with damage: 1"=1-0.0
