Industria Arcanum v1.5 Alpha
Very close to 2.0 now! Just need testing.

--- a/config/thaumicinfusion.cfg
+++ b/config/thaumicinfusion.cfg
@@ -1501,6 +1501,7 @@ blocks {
     B:"Yuzu Log"=true
     B:"Yuzu Sapling"=true
     B:"Zucchini Crop"=true
+    B:fluid.potion.invisiSight=true
     B:sleepingBag.name=true
     B:"tEmPoRAl blOCk"=true
     B:"tEmPoRAl lOg"=true
@@ -1655,6 +1656,7 @@ blocks {
     B:"tile.dendrology:slab.name"=true
     B:"tile.dendrology:wood.name"=true
     B:tile.diode.name=true
+    B:tile.dirtPath.name=true
     B:tile.doorbell.name=true
     B:tile.doublePlant.name=true
     B:tile.dreamwood.name=true
@@ -1727,6 +1729,7 @@ blocks {
     B:"tile.extrautils:pipes.name"=true
     B:"tile.extrautils:pureLove.name"=true
     B:"tile.extrautils:sound_muffler.name"=true
+    B:tile.fairyTorch.name=true
     B:tile.firealarmoff.name=true
     B:tile.firealarmon.name=true
     B:tile.flower.name=true
@@ -1834,6 +1837,9 @@ blocks {
     B:tile.railcraft.track.name=true
     B:tile.railcraft.wall.alpha.name=true
     B:tile.railcraft.wall.beta.name=true
+    B:tile.redlogic.lamp.cube.d.name=true
+    B:tile.redlogic.lamp.cube.i.name=true
+    B:tile.redlogic.lamp.cube.n.name=true
     B:tile.reedBlock.name=true
     B:tile.reedBlock0Slab.name=true
     B:tile.reedBlock0SlabFull.name=true
@@ -1896,7 +1902,6 @@ blocks {
 
 
 networking {
-    # How many times a single block can send a packet per update, the lower the numbers, the faster an infused or essentia block will be update however can cause lag
     I:"Packet Timeout"=10000
 }
 
