--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 general {
+    # Set to false to disable rendering of baubles in the player.
+    B:baubleRender.enabled=true
+
     # Set to false to remove the block breaking particles from the flowers and other items in the mod.
     B:blockBreakingParticles.enabled=true
 
