--- a/config/Automagy.cfg
+++ b/config/Automagy.cfg
@@ -20,7 +20,19 @@ general {
     B:thinking_cap_usable=true
 
     # On startup, check whether a newer version of the mod exists
-    B:version_checking=true
+    B:version_checking=false
+}
+
+
+##########################################################################################################
+# loot
+#--------------------------------------------------------------------------------------------------------#
+# Loot weights. Higher for higher chance. 1 is rare. 0 disables.
+##########################################################################################################
+
+loot {
+    # Lesser Ring of Ender Disjunction
+    I:lesser_disjunction=1
 }
 
 
