--- a/config/Loot++/chest_content.cfg
+++ b/config/Loot++/chest_content.cfg
@@ -48,6 +48,7 @@ _min_max_amounts {
     S:strongholdCorridor=2-4
     S:strongholdCrossing=1-5
     S:strongholdLibrary=1-5
+    S:towerChestContents=0-0
     S:villageBlacksmith=4-11
 }
 
@@ -89,6 +90,7 @@ dungeonchest_additions {
 
 
 dungeonchest_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"Botania:blackLotus"=1-1-6-0
     S:"Botania:lexicon"=1-1-6-0
     S:"Botania:manaBottle"=1-1-5-0
@@ -285,6 +287,7 @@ mineshaftcorridor_additions {
 
 
 mineshaftcorridor_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"Botania:blackLotus"=1-1-6-0
     S:"Botania:overgrowthSeed"=1-1-2-0
     S:"DCsAppleMilk:defeatedcrow.itemBottle"=1-1-10-20
@@ -513,6 +516,7 @@ pyramiddesertychest_additions {
 
 
 pyramiddesertychest_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"Botania:blackLotus"=1-1-6-0
     S:"Botania:overgrowthSeed"=1-1-2-0
     S:"EnderIO:item.darkSteel_sword"=1-1-4-0
@@ -687,6 +691,7 @@ pyramidjunglechest_additions {
 
 
 pyramidjunglechest_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"Botania:blackLotus"=1-1-6-0
     S:"Botania:overgrowthSeed"=1-1-2-0
     S:"DCsAppleMilk:defeatedcrow.itemBottle"=1-1-10-19
@@ -906,6 +911,7 @@ strongholdcorridor_additions {
 
 
 strongholdcorridor_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"Botania:blackLotus"=1-1-6-0
     S:"Botania:manaResource"=1-1-8-1
     S:"Botania:overgrowthSeed"=1-1-2-0
@@ -961,6 +967,7 @@ strongholdcrossing_additions {
 
 
 strongholdcrossing_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"DCsAppleMilk:defeatedcrow.itemBottle"=1-1-10-22
     S:"DCsAppleMilk:defeatedcrow.princessClam"=1-1-5-0
     S:"ExtraUtilities:divisionSigil"=1-1-2-0
@@ -1002,6 +1009,7 @@ strongholdlibrary_additions {
 
 
 strongholdlibrary_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
     S:"SimpleLantern:CoalFuel"=1-2-10-0
     S:"Thaumcraft:ItemAmuletVis"=1-1-1-0
     S:"Thaumcraft:ItemAxeThaumium"=1-1-1-0
@@ -1023,6 +1031,17 @@ strongholdlibrary_default {
     S:"minecraft:enchanted_book"=1-5-2-0
     S:"minecraft:map"=1-1-1-0
     S:"minecraft:paper"=2-7-20-0
+}
+
+
+towerchestcontents_additions {
+    S:"towerChestContents Additions:" <
+     >
+}
+
+
+towerchestcontents_default {
+    S:"Automagy:baubleEnderDisjunction"=1-1-1-1
 }
 
 
