--- a/config/dimensionalPockets.cfg
+++ b/config/dimensionalPockets.cfg
@@ -25,7 +25,7 @@ gameplay {
 
     # Decides whether or not any player spawns with a book upon new spawn.
     #  [default: true]
-    B:should_spawn_with_book=true
+    B:should_spawn_with_book=false
 }
 
 
@@ -33,11 +33,11 @@ general {
     # If you have a hard time distinguishing colours, you can change this to true.
     # Gameplay relevant parts of the mod will be displayedin a less color dependent way then.
     #  [default: false]
-    B:color_blind_mode=false
+    B:color_blind_mode=true
 
     # If you do not want the mod to check for more recent versions, set this to "false".
     #  [default: true]
-    B:do_version_check=true
+    B:do_version_check=false
 
     #  [default: true]
     B:keep_pocket_rooms_chunk_loaded=true
