--- a/config/thaumicinfusion.cfg
+++ b/config/thaumicinfusion.cfg
@@ -1129,6 +1129,7 @@ blocks {
     B:"Racinaea Fraseri"=true
     B:"Radish Crop"=true
     B:"Raspberry Crop"=true
+    B:"Rebounding Enigma"=true
     B:"Red Candle"=true
     B:"Red Flowering Vine"=true
     B:"Red Flowers"=true
@@ -1419,6 +1420,7 @@ blocks {
     B:Track=true
     B:"Transparent Technical Block"=true
     B:Trapdoor=true
+    B:"Traveler's Bricks"=true
     B:Tripwire=true
     B:"Tripwire Hook"=true
     B:"Tropical Blue Bamboo"=true
@@ -1747,6 +1749,7 @@ blocks {
     B:tile.birdbath.name=true
     B:tile.blindoff.name=true
     B:tile.blindon.name=true
+    B:tile.blockBookshelfEnchanted.name=true
     B:tile.blockBuffer.name=true
     B:tile.blockCandle.name=true
     B:tile.blockCapBank.name=true
@@ -1768,6 +1771,7 @@ blocks {
     B:tile.blockMagicalLog.name=true
     B:tile.blockManaPod.name=true
     B:tile.blockMetal.name=true
+    B:tile.blockMetalGlow.name=true
     B:tile.blockNetherRune.name=true
     B:tile.blockPortalNothing.name=true
     B:tile.blockSlate.name=true
@@ -1775,6 +1779,7 @@ blocks {
     B:tile.blockTaint.name=true
     B:tile.blockTaintFibres.name=true
     B:tile.blockTeaPlant.name=true
+    B:tile.blockTranslucent.name=true
     B:tile.buriedPetals.name=true
     B:tile.ceilinglightoff.name=true
     B:tile.ceilinglighton.name=true
