--- a/config/forestry/common.conf
+++ b/config/forestry/common.conf
@@ -86,7 +86,7 @@ tweaks.permissions.disabled=false
 # set to true to disable some nagging and warnings (e.g. GregTech).
 tweaks.nags.disabled=false
 # set to true to disable update and version check notice.
-tweaks.upgradenotice.disabled=false
+tweaks.upgradenotice.disabled=true
 # set to true to have farms use a square layout instead of a diamond one.
 tweaks.farms.squared=false
 
@@ -99,6 +99,6 @@ world.generate.apatite=true
 # set to false to force forestry to skip generating beehives in the world
 world.generate.beehives=true
 # set to false to force forestry to skip generating own copper ore blocks in the world
-world.generate.copper=true
+world.generate.copper=false
 # set to false to force forestry to skip generating own tin ore blocks in the world
-world.generate.tin=true
+world.generate.tin=false
