--- a/config/agricraft/Configuration.cfg
+++ b/config/agricraft/Configuration.cfg
@@ -41,7 +41,7 @@ agricraft {
     B:"Resource Crops"=false
 
     # set to false if you don't want weeds to be able to overgrow other plants [default: true]
-    B:"Weeds can overtake plants"=true
+    B:"Weeds can overtake plants"=false
 }
 
 
@@ -68,7 +68,7 @@ irrigation {
     B:"Disable Irrigation"=false
 
     # set to true to let tanks fill up when water flows above them [default: false]
-    B:"Fill tank from flowing water"=false
+    B:"Fill tank from flowing water"=true
 
     # set to false to disable placing a source block when breaking non-empty tanks [default: true]
     B:"Spawn water after breaking tank"=true
