--- a/config/forestry/common.conf
+++ b/config/forestry/common.conf
@@ -99,6 +99,6 @@ world.generate.apatite=true
 # set to false to force forestry to skip generating beehives in the world
 world.generate.beehives=true
 # set to false to force forestry to skip generating own copper ore blocks in the world
-world.generate.copper=false
+world.generate.copper=true
 # set to false to force forestry to skip generating own tin ore blocks in the world
-world.generate.tin=false
+world.generate.tin=true
