--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -55,9 +55,10 @@ heads {
         Shank3001
         shaunmurphy
         GlitchMonkeyMC
-        jmgurgeh
         Barlock_James
         Khaysis
+		DarkRazzy
+		xmashat
      >
     S:youtubers <
      >
@@ -77,7 +78,7 @@ mob {
     I:"Mob ID"=89
 
     # The change the mob will spawn. Base values: zombies, skeletons, spider, creepers = 100, endermen = 10, witches = 5
-    I:"Spawn probability"=5
+    I:"Spawn probability"=1
 }
 
 
