--- a/config/FlaxbeardsSteamPower.cfg
+++ b/config/FlaxbeardsSteamPower.cfg
@@ -161,8 +161,8 @@ weapons {
     B:"Generate End Zinc"=false
     B:"Generate Nether Copper"=false
     B:"Generate Nether Zinc"=false
-    B:"Generate Overworld Copper"=false
-    B:"Generate Overworld Zinc"=false
+    B:"Generate Overworld Copper"=true
+    B:"Generate Overworld Zinc"=true
 }
 
 
