--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -527,7 +527,7 @@ tweaks {
             # 
             # Change to 'trackingAura=false' to disable the Tracking Aura
             # 
-            B:trackingAura=true
+            B:trackingAura=false
         }
 
     }
